--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pyparsing==2.4.2
 pytest==5.2.2
 python-dateutil==2.8.1
 six==1.12.0
+tqdm==4.38.0
 typed-ast==1.4.0
 wcwidth==0.1.7
 wrapt==1.11.2
